# tribalwars

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/common/: load.py  save.py
src/features/buildings/: buildings.py
src/scripts/: attack_villages.py  construct_buildings.py  farm_villages.py  get_barbarian_villages.py  get_user_info.py  login.py  main.py  recruit_troops.py  simple_script.py
